--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -35,10 +35,13 @@ $font-primary: "Didact Gothic", sans-serif;
 // $font-size-menu: 0.8rem;
 
 $font-size-banner-1: 10rem;
-$font-size-banner-2: 5rem;
+$font-size-banner-1-phone: 8rem;
 
-$font-size-sm: 0.8rem;
-$font-size-normal: 1.2rem;
+$font-size-banner-2: 5rem;
+$font-size-banner-2-phone: 3.5rem;
+
+$font-size-sm: 0.9rem;
+$font-size-normal: 1.1rem;
 $font-size-md: 1.7rem;
 $font-size-lg: 2rem;
 
