--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -2,12 +2,12 @@
 $color-lightblue-1: #f5fafc;
 $color-lightblue-2: #f0fbff;
 $color-lightblue-3: #dde8f3;
-$color-lightblue-4: #d7e1eb;
+$color-lightblue-4: #496b8e;
 $color-lightblue-5: #507eac;
 
 $color-yellow-1: #fcfadd;
 $color-yellow-2: #f2f0d6;
-$color-yellow-3: #fff897;
+$color-yellow-3: #f8ffc8;
 $color-yellow-4: #fdc500;
 
 $color-brown-1: #f2812a;
