--- a/styles/sass/body/_intro.scss
+++ b/styles/sass/body/_intro.scss
@@ -2,6 +2,6 @@
   width: 80vw;
   margin: auto;
   padding: 3rem;
-  color: $color-blue-4;
+  color: $color-yellow-1;
   font-size: $font-size-normal;
 }
